<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guoyu.guoyuoaplatform_android.activity.MainActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/conversation_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/conversation_icon"
                android:layout_width="@dimen/tab_bar_iv_length"
                android:layout_height="@dimen/tab_bar_iv_length"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/tabbar_conversation_normal" />

            <TextView
                android:id="@+id/conversation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_conversation"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/announcement_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/announcement_icon"
                android:layout_width="@dimen/tab_bar_iv_length"
                android:layout_height="@dimen/tab_bar_iv_length"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/tabbar_contact_normal"/>

            <TextView
                android:id="@+id/announcement_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_announcement"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/function_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/function_icon"
                android:layout_width="@dimen/tab_bar_iv_length"
                android:layout_height="@dimen/tab_bar_iv_length"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/tabbar_function_normal"/>

            <TextView
                android:id="@+id/function_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_function"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="@dimen/tab_bar_iv_length"
                android:layout_height="@dimen/tab_bar_iv_length"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/tabbar_function_normal"/>

            <TextView
                android:id="@+id/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_contact"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/mine_icon"
                android:layout_width="@dimen/tab_bar_iv_length"
                android:layout_height="@dimen/tab_bar_iv_length"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/tabbar_function_normal"/>

            <TextView
                android:id="@+id/mine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_mine"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
